--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-	<display-name>Archetype Created Web Application</display-name>
+	<display-name>Let lokator - Mladen Krstic</display-name>
 
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/config/log4j.properties</param-value>
+	</context-param>
+	
+	<context-param>
+    	<param-name>webapp_root</param-name>
+    	<param-value>project.root</param-value>
 	</context-param>
 
 	<listener>
@@ -45,14 +50,6 @@
 		<servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<filter>
-		<filter-name>CacheControlFilter</filter-name>
-		<filter-class>app.web.model.CacheControlFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>CacheControlFilter</filter-name>
-		<servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
-	</filter-mapping>
 	<filter>
 		<filter-name>httpMethodFilter</filter-name>
 		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
